k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-apps
  labels:
    app: grpc-service
    env: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      env: demo
  template:
    metadata:
      name: grpc-service-pod
      labels:
        env: demo
        app: grpc-service
    spec:
      containers:
      - name: grpc-service
        image: grpc-app:latest
        imagePullPolicy: Never 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8081
          - containerPort: 9091
