k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-svc-loadbalancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8081
  selector:
    env: demo
